added addtodos feature by using state

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -70,3 +70,8 @@ body {
   margin-right: 4px;
   cursor: pointer;
 }
+.data {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
