--- a/src/components/main.css
+++ b/src/components/main.css
@@ -29,6 +29,13 @@ body {
   padding: 5px;
   background-color: #4a148c;
 }
+
+.card:hover {
+  background-color: #fcfcfc;
+  color: black;
+  box-shadow: rgb(26, 19, 19) 5px 4px 20px -3px;
+}
+
 .btn-primary {
   border: none;
   width: 60px;
