--- a/src/components/main.css
+++ b/src/components/main.css
@@ -5,9 +5,14 @@
 }
 body {
   overflow-x: hidden;
+  background-color: #f0efe9;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
-.container {
+.flex-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -25,21 +30,31 @@ body {
 
 .card {
   margin-top: 10px;
+  border-radius: 0px;
   border: none;
-  padding: 5px;
-  background-color: #4a148c;
+  padding: 0px 20px 0px 20px;
+  color: #212529;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  line-height: 23px;
+  font-size: 15px;
+  font-weight: 400;
+  width: 250px;
 }
 
-.card:hover {
-  background-color: #fcfcfc;
-  color: black;
-  box-shadow: rgb(26, 19, 19) 5px 4px 20px -3px;
-}
+/* .card:last-child {
+  margin-bottom: 10px;
+} */
 
 .btn-primary {
   border: none;
+  border-radius: 50%;
   width: 60px;
-  background-color: #4a148c;
+  height: 60px;
+  position: relative;
+  top: 30px;
+  background-color: #4fe3a4;
 }
 .card-body input {
   border-top: none;
@@ -51,10 +66,6 @@ body {
 
 .none {
   display: none;
-}
-.img {
-  width: 100px;
-  height: 100px;
 }
 .clock {
   line-height: 5px;
@@ -81,6 +92,7 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  cursor: pointer;
 }
 
 .op-1:hover {
@@ -89,4 +101,34 @@ body {
 
 .op-2:hover {
   color: green;
+}
+.date-line {
+  margin-top: 13px;
+  line-height: 11px;
+  font-size: 10px;
+}
+
+.date {
+  margin-right: 5px;
+  font-size: 30px;
+  font-weight: 500;
+  margin-top: 12px;
+}
+
+.day {
+  margin-top: 13px;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.cardlist {
+  overflow: auto;
+}
+
+.sticky {
+  top: 0;
+  position: sticky;
+}
+.form-check-input:checked {
+  background-color: #4fe3a4;
 }
